--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <h1>Gutenberg Project</h1>
-    <p>A social cataloging website that allows you to freely search its database of books, annotations, and reviews.</p>
+    <h1 class="heading">Gutenberg Project</h1>
+    <p class="paragraph">A social cataloging website that allows you to freely search its database of books, annotations, and reviews.</p>
     <div class="category-list">
       <div *ngFor="let category of categories" class="category" (click)="openCategory(category)">
         <i [class]="category.icon"></i>
