--- a/src/app/components/book-list/book-list.component.scss
+++ b/src/app/components/book-list/book-list.component.scss
@@ -1,132 +1,146 @@
 .loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 6px solid #ccc;
+  border-top: 6px solid #333333;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-bottom: 10px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+
+  .back-button {
+    background: none;
+    border: none;
+    font-size: 27px;
+    color: #5E56E7;
+    cursor: pointer;
+  }
+
+  .heading {
+    font-size: 30px;
+    font-family: Montserrat, Semi Bold;
+    color: #5E56E7;
+  }
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: #F0F0F6;
+  border-radius: 4px;
+  height: 40px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+}
+
+.search-container i {
+  font-size: 18px;
+  color: #666;
+}
+
+.search-container input {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 5px;
+  background: #F0F0F6;
+}
+
+.clear-btn {
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+input {
+  width: 100%;
+  max-width: 400px;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.book-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 10px;
+  justify-items: center;
+  background: #F0F0F6;
+  padding: 6px;
+
+  .book-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.8);
-    z-index: 1000;
-  }
-  
-  .spinner {
-    width: 50px;
-    height: 50px;
-    border: 6px solid #ccc;
-    border-top: 6px solid #000000;
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    margin-bottom: 10px;
-  }
-    @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    width: 100px;
   }
 
-.header {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-
-    .back-button {
-        background: none;
-        border: none;
-        font-size: 27px;
-        color: #3b82f6;
-        cursor: pointer;
-      }
-
-    .heading{
-        font-size: 27px;
-        color: #3b82f6;
-    }
-  }
-  
-  .search-container {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    padding: 10px;
-    background: #f3f3f3;
+  .book-card {
+    width: 100px;
+    height: 140px;
     border-radius: 5px;
+    overflow: hidden;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    margin-bottom: 20px;
-  }
-  
-  .search-container i {
-    font-size: 18px;
-    color: #666;
-  }
-  
-  .search-container input {
-    flex: 1;
-    border: none;
-    outline: none;
-    padding: 5px;
-    background: #f3f3f3;
-  }
-  
-  input {
-    width: 100%;
-    max-width: 400px;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
   }
 
-  .book-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 10px;
-    justify-items: center;
-
-    .book-wrapper {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100px;
-      }
-      .book-card {
-        width: 100px;
-        height: 140px;
-        border-radius: 5px;
-        overflow: hidden;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-      }
-
-      .book-card img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      
-      .book-title,
-      .book-author {
-        width: 100px; 
-        text-align: justify;
-        font-size: 12px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-      
-      .book-title {
-        font-weight: bold;
-      }
-      
-      .book-author {
-        font-size: 10px;
-        color: gray;
-        margin-top: -9px;
-      }
+  .book-card img {
+    width: 114px;
+    height: 162px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px 0 rgba(211, 209, 238, 0.5);
   }
-  
 
-  
+  .book-title,
+  .book-author {
+    width: 100px;
+    text-align: justify;
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
-  
-  
+  .book-title {
+    font-weight: bold;
+  }
+
+  .book-author {
+    font-size: 12px;
+    color: gray;
+    margin-top: -9px;
+  }
+}
