--- a/src/app/components/category/category.component.scss
+++ b/src/app/components/category/category.component.scss
@@ -16,22 +16,24 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    .h1 {
-        font-size: 58px;
-        font-weight: bold;
-        color: #3b82f6;
-        text-align: justify;
-    }
-
-    .p {
-        font-size: 18px;
-        color: #000;
-        margin-top: 8px;
-        text-align: justify;
-      }
+  
+    .heading {
+      font-size: 48px;
+      font-family: Montserrat, Semi Bold;
+      font-weight: bold;
+      color: #5E56E7;
+      text-align: justify;
   }
   
+  .paragraph {
+      font-size: 20px;
+      font-family: Montserrat, Regular;
+      color: #333333;
+      margin-top: 8px;
+      text-align: justify;
+    }
+  }
+
   .category-list {
     margin-top: 16px;
     display: grid;
@@ -45,11 +47,13 @@ body {
     align-items: center;
     justify-content: space-between;
     background: #fff;
-    padding: 12px;
-    border-radius: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 4px;
+    height: 50px;
     cursor: pointer;
     transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px 0 rgba(211, 209, 238, 0.5);
     border: 1px solid #fff;
   }
   .category i {
@@ -57,7 +61,7 @@ body {
 }
   
   .category:hover {
-    background: #bfdbfe;
+    background: #F8F7FF;
     transform: translateY(-2px);
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
   }
@@ -68,7 +72,7 @@ body {
   }
   
   .category i {
-    color: #3b82f6;
+    color: #5E56E7;
     font-size: larger;
 
   }
